@@ -1,3 +1,6 @@
+- urpmi
+  o after installing in chroot, migrate back rpmdb db version to one
+    compatible with the rpm in the chroot
 - fix display of downloaded urls with aria2 and metalinks
 - fix handling --downloader when using mirrorlist (it was forcing aria2)
 
